Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 2.2.0
    mcMMO's config system has been rewritten
    mcMMO will now warn you in the console if it thinks you are running incompatible server software
    Parties no longer have a cap, you can level them forever for bragging rights
    You can now specify multiple repair-items for an item (such as specifying that a wooden sword can be repaired by all types of planks)
    Simplified the config entries for Repairables in the Repair config
    Repairables in the repair config now use their internal registry key names instead of Bukkit material names
    Diamond Armor XP multiplier vanilla config setting reduced from 6x -> 2x
    Optimizations were made for many anti-exploit behaviours
    Acrobatic's Dodge will no longer reward XP for a few seconds after a TP
    Roll will not give XP for a few seconds after a TP
    You can now disable the party system completely
    Many config files are now generated on demand instead of being copied from within the JAR
    All config nodes that used to be styled with CamelCase or otherwise now use hyphens (-) as spaces for readability and consistency
    All config nodes will now use Capital letters at the start of each nodes name and after each hyphen (-)
    All config nodes now include a comment with the default value of the node to use as reference
    Expanded settings relating to purging users who have not leveled or users who had not logged in for many months
    Acrobatic's Dodge XP increased from 120 -> 480
    Fishing's always catch fish setting now defaults to true instead of false
    Optimized code related to Fishing
    NOTE: Not every config key that was renamed will be listed here
    Admins will now be notified if a player trips over-fishing exploit detection 3+ times in a row (Locale: "Fishing.OverFishingDetected")