@@ -3,11 +3,20 @@ package com.gmail.nossr50.config.hocon.skills.fishing;
 import ninja.leaping.configurate.objectmapping.Setting;
 import ninja.leaping.configurate.objectmapping.serialize.ConfigSerializable;
 
+import java.util.HashMap;
+
 @ConfigSerializable
 public class ConfigFishing {
 
     @Setting(value = "General")
     private ConfigFishingGeneral fishingGeneral = new ConfigFishingGeneral();
+
+    @Setting(value = "Sub-Skills")
+    public ConfigFishingSubskills fishingSubskills = new ConfigFishingSubskills();
+
+    /*
+     * GETTERS BOILERPLATE
+     */
 
     public ConfigFishingGeneral getFishingGeneral() {
         return fishingGeneral;
@@ -23,5 +32,26 @@ public class ConfigFishing {
 
     public boolean isOverrideVanillaTreasures() {
         return fishingGeneral.isOverrideVanillaTreasures();
+    }
+
+    public boolean isAllowCustomDrops() {
+        return fishingGeneral.isAllowCustomDrops();
+    }
+
+    public ConfigFishingSubskills getFishingSubskills() {
+        return fishingSubskills;
+    }
+
+    public ConfigFishingInnerPeace getInnerPeace() {
+        return fishingSubskills.getInnerPeace();
+    }
+
+    public HashMap<Integer, Integer> getInnerPeaceVanillaXPMultiplier() {
+        return getInnerPeace().getInnerPeaceVanillaXPMultiplier();
+    }
+
+    public int getVanillaXPMultInnerPeace(int rank)
+    {
+        return getInnerPeaceVanillaXPMultiplier().get(rank);
     }
 }
